--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
+    "swiper": "^8.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
